tests/ui/repr/repr-packed-contains-align.stderr
error[E0588]: packed type cannot transitively contain a `#[repr(align)]` type
  --> $DIR/repr-packed-contains-align.rs:22:1
   |
LL | struct SC(SA);
   | ^^^^^^^^^
   |
note: `SA` has a `#[repr(align)]` attribute
  --> $DIR/repr-packed-contains-align.rs:5:1
   |
LL | struct SA(i32);
   | ^^^^^^^^^

error[E0588]: packed type cannot transitively contain a `#[repr(align)]` type
  --> $DIR/repr-packed-contains-align.rs:25:1
   |
LL | struct SD(SB);
   | ^^^^^^^^^
   |
note: `SA` has a `#[repr(align)]` attribute
  --> $DIR/repr-packed-contains-align.rs:5:1
   |
LL | struct SA(i32);
   | ^^^^^^^^^
note: `SD` contains a field of type `SB`
  --> $DIR/repr-packed-contains-align.rs:25:11
   |
LL | struct SD(SB);
   |           ^^
note: ...which contains a field of type `SA`
  --> $DIR/repr-packed-contains-align.rs:8:11
   |
LL | struct SB(SA);
   |           ^^

error[E0588]: packed type cannot transitively contain a `#[repr(align)]` type
  --> $DIR/repr-packed-contains-align.rs:28:1
   |
LL | struct SE(UA);
   | ^^^^^^^^^
   |
note: `UA` has a `#[repr(align)]` attribute
  --> $DIR/repr-packed-contains-align.rs:12:1
   |
LL | union UA {
   | ^^^^^^^^

error[E0588]: packed type cannot transitively contain a `#[repr(align)]` type
  --> $DIR/repr-packed-contains-align.rs:31:1
   |
LL | struct SF(UB);
   | ^^^^^^^^^
   |
note: `UA` has a `#[repr(align)]` attribute
  --> $DIR/repr-packed-contains-align.rs:12:1
   |
LL | union UA {
   | ^^^^^^^^
note: `SF` contains a field of type `UB`
  --> $DIR/repr-packed-contains-align.rs:31:11
   |
LL | struct SF(UB);
   |           ^^
note: ...which contains a field of type `UA`
  --> $DIR/repr-packed-contains-align.rs:18:5
   |
LL |     a: UA
   |     ^

error[E0588]: packed type cannot transitively contain a `#[repr(align)]` type
  --> $DIR/repr-packed-contains-align.rs:34:1
   |
LL | union UC {
   | ^^^^^^^^
   |
note: `UA` has a `#[repr(align)]` attribute
  --> $DIR/repr-packed-contains-align.rs:12:1
   |
LL | union UA {
   | ^^^^^^^^

error[E0588]: packed type cannot transitively contain a `#[repr(align)]` type
  --> $DIR/repr-packed-contains-align.rs:39:1
   |
LL | union UD {
   | ^^^^^^^^
   |
note: `UA` has a `#[repr(align)]` attribute
  --> $DIR/repr-packed-contains-align.rs:12:1
   |
LL | union UA {
   | ^^^^^^^^
note: `UD` contains a field of type `UB`
  --> $DIR/repr-packed-contains-align.rs:40:5
   |
LL |     n: UB
   |     ^
note: ...which contains a field of type `UA`
  --> $DIR/repr-packed-contains-align.rs:18:5
   |
LL |     a: UA
   |     ^

error[E0588]: packed type cannot transitively contain a `#[repr(align)]` type
  --> $DIR/repr-packed-contains-align.rs:44:1
   |
LL | union UE {
   | ^^^^^^^^
   |
note: `SA` has a `#[repr(align)]` attribute
  --> $DIR/repr-packed-contains-align.rs:5:1
   |
LL | struct SA(i32);
   | ^^^^^^^^^

error[E0588]: packed type cannot transitively contain a `#[repr(align)]` type
  --> $DIR/repr-packed-contains-align.rs:49:1
   |
LL | union UF {
   | ^^^^^^^^
   |
note: `SA` has a `#[repr(align)]` attribute
  --> $DIR/repr-packed-contains-align.rs:5:1
   |
LL | struct SA(i32);
   | ^^^^^^^^^
note: `UF` contains a field of type `SB`
  --> $DIR/repr-packed-contains-align.rs:50:5
   |
LL |     n: SB
   |     ^
note: ...which contains a field of type `SA`
  --> $DIR/repr-packed-contains-align.rs:8:11
   |
LL | struct SB(SA);
   |           ^^

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0588`.
